# karp-pipeline

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/karppipeline/: cli.py  common.py  config.py  install.py  logging.py  models.py  read.py  run.py
src/karppipeline/builtins/generate_categorical_values/: __init__.py
src/karppipeline/converters/: saldo.py  sosource.py  ud.py  util.py
src/karppipeline/converters/sosource/: __init__.py  available_words.json
src/karppipeline/execution/: dependency.py  install.py  run.py
src/karppipeline/modules/dataupload/: __init__.py
src/karppipeline/modules/generate_categorical_values/: __init__.py
src/karppipeline/modules/jsonl/: __init__.py
src/karppipeline/modules/karp/: __init__.py
src/karppipeline/modules/karps/: __init__.py  export.py  install.py  models.py  namespace.py
src/karppipeline/modules/karps_config/: __init__.py  export.py  install.py
src/karppipeline/modules/karps_data/: __init__.py  export.py  install.py
src/karppipeline/modules/sbxmetadata/: __init__.py
src/karppipeline/modules/sbxrepo/: __init__.py  common.py  installer.py  metadata.py  models.py
src/karppipeline/modules/schema/: __init__.py  entry_task.py  schema_creator.py
src/karppipeline/util/: git.py  json.py  subprocess.py  yaml.py
tests/: test_config.py
util/: _find-mink-errors.sh  find-mink-errors.sh
