[project]
name = "karp-pipeline"
version = "1.0.0-dev"
description = "Lexical infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema-rs==0.42.1",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "orjson==3.11.7",
]

[dependency-groups]
dev = ["ruff", "pytest", "basedpyright"]

[project.scripts]
karp-pipeline = "karppipeline.cli:cli"

[tool.uv]
package = true
exclude-newer = "90 days"
add-bounds = "major"

